la til johan sitt løsningsforslag for øveprøven

--- a/Kap1/Oppgaver/1.1_minførste_nettside.html
+++ b/Kap1/Oppgaver/1.1_minførste_nettside.html
@@ -5,10 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Min første nettside</title>
   </head>
-  <body>
-    <h3><b>Navn Rase</b></h3>
-    <p>Frodo Hobbit</p>
-    <p>Legolas Alv</p>
-    <p>Gimli Dverg</p>
-  </body>
+  <style></style>
+  <table>
+    <tr>
+      <th>Navn</th>
+      <th>Rase</th>
+    </tr>
+    <tr>
+      <td>Frodo</td>
+      <td>Hobbit</td>
+    </tr>
+    <tr>
+      <td>Legolas</td>
+      <td>Alv</td>
+    </tr>
+    <tr>
+      <td>Gimli</td>
+      <td>Dverg</td>
+    </tr>
+  </table>
 </html>
