--- a/øveprøve_IT1_kap_1-2_resurser/got/got.html
+++ b/øveprøve_IT1_kap_1-2_resurser/got/got.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Familier i Game of Thrones</title>
-</head>
-<body>
-<img src="got_topbilde.jpg" alt="">
-Familier i Game of Thrones <br>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam animi aperiam assumenda debitis dolor error eum facere maiores minima mollitia necessitatibus numquam quibusdam quod, repellat reprehenderit saepe soluta suscipit totam!<br>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Familier i Game of Thrones</title>
+    <style></style>
+  </head>
+  <body>
+    <img src="got_topbilde.jpg" alt="" />
+    Familier i Game of Thrones <br />
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam animi
+    aperiam assumenda debitis dolor error eum facere maiores minima mollitia
+    necessitatibus numquam quibusdam quod, repellat reprehenderit saepe soluta
+    suscipit totam!<br />
 
-Familiene <br>
-<ul>
-  <li><a href="got.html">Hjem</a></li>
-  <li><a href="starks.html">Starks</a></li>
-  <li><a href="lannisters.html">Lannisters</a></li>
-  <li><a href="greyjoys.html">Greyjoys</a></li>
-</ul>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias, cumque delectus ducimus est explicabo ipsa iure natus nisi odio possimus quae quaerat quasi reiciendis repudiandae tempora unde veritatis vitae!
+    Familiene <br />
+    <ul>
+      <li><a href="got.html">Hjem</a></li>
+      <li><a href="starks.html">Starks</a></li>
+      <li><a href="lannisters.html">Lannisters</a></li>
+      <li><a href="greyjoys.html">Greyjoys</a></li>
+    </ul>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias,
+    cumque delectus ducimus est explicabo ipsa iure natus nisi odio possimus
+    quae quaerat quasi reiciendis repudiandae tempora unde veritatis vitae!
 
-<img src="got_illustrasjonsbilde.jpg" alt="">
+    <img src="got_illustrasjonsbilde.jpg" alt="" />
 
-Bunntekst
-</body>
+    Bunntekst
+  </body>
 </html>
