ferdig med prøven

--- a/westworld/westworld.html
+++ b/westworld/westworld.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/css for westworld.css" />
   </head>
   <body>
-    <img src="westworld_toppbilde.jpg" alt="Westworld toppbilde" />
+    <img src="westworld_toppbilde.png" alt="Westworld toppbilde" />
     <ul>
       <li><a href="westworld.html">Hjem</a></li>
       <li><a href="parken.html">Parken</a></li>
@@ -32,7 +32,7 @@
       <li>Punkt I</li>
       <li>Punkt II</li>
       <li>Punkt III</li>
-      <li>Punkt IV</li>
+      <li>Punkt BipBap</li>
     </ol>
     <img
       src="westworld_illustrasjonsbilde.jpg"
