--- a/IT digital fotavtrykk projekt/home screen.html
+++ b/IT digital fotavtrykk projekt/home screen.html
@@ -9,19 +9,20 @@
   <body>
     <header>
       <nav>
-        <button id="logo-knapp">
-          <img src="digital fotavtrykk logo.jpeg" alt="Logo" id="logo" />
-        </button>
-        <div id="navigasjons-knapper">
+        <div id="navigasjon">
           <button id="om-oss-knapp">Om oss</button>
           <button id="hjelp-knapp">Hjelp</button>
+          <a href="#" id="logo-knapp">
+            <img src="digital fotavtrykk logo.jpeg" alt="Logo" id="logo" />
+          </a>
           <button id="innstillinger-knapp">Innstillinger</button>
+          <button id="språk-knapp">
+            <img src="globe logo.png" alt="Språkvalg" />
+          </button>
         </div>
-        <button id="språk-knapp">
-          <img src="globe logo.png" alt="Språkvalg" />
-        </button>
       </nav>
     </header>
+
     <main>
       <section id="innhold">
         <div id="venstre-seksjon">
@@ -35,7 +36,21 @@
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
             maximus, nulla ut commodo sagittis, sapien dui mattis dui, non
-            pulvinar lorem felis nec erat.
+            pulvinar lorem felis nec erat. Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Nobis, sapiente! Molestias officia
+            maiores velit asperiores deserunt impedit minus, fugiat error
+            commodi, facere, alias quibusdam sit magni beatae. Reprehenderit,
+            placeat eligendi. Lorem ipsum dolor sit amet consectetur adipisicing
+            elit. Quod magnam vitae recusandae ratione porro culpa inventore
+            iusto ex ut accusantium consequatur rerum doloribus autem, deserunt
+            tempore reiciendis adipisci consectetur nulla! Lorem ipsum dolor sit
+            amet, consectetur adipisicing elit. Sed blanditiis ea consectetur
+            quibusdam accusantium beatae non est voluptate, natus, architecto,
+            rem similique iste magni impedit minus ut. Natus, ipsum voluptatem?
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi,
+            odit. Itaque velit reprehenderit molestias nesciunt. Mollitia
+            voluptates accusantium a eos sint cupiditate ad molestias porro vel,
+            laudantium, quod et ab!
           </p>
         </div>
       </section>
@@ -54,7 +69,13 @@
         </div>
         <div class="spørsmål">
           <h3>Hva er konsekvensene av lagring og analyse av data?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem,
+            ipsum dolor sit amet consectetur adipisicing elit. Neque, deserunt
+            quibusdam totam nam voluptas quod id ipsam? Earum, corporis non!
+            Veniam totam fuga quam non rerum eligendi officiis, ab voluptates!
+            lo
+          </p>
         </div>
       </section>
     </main>
@@ -74,6 +95,5 @@
       </section>
       <p>&copy; 2024</p>
     </footer>
-    <script src="script.js"></script>
   </body>
 </html>
