--- a/IT digital fotavtrykk projekt/ali nettside.html
+++ b/IT digital fotavtrykk projekt/ali nettside.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Header Nettside</title>
-    <link rel="stylesheet" href="stil.css" />
+    <title>
+      Påvirker et stort digitalt fotavtrykk individers personvern, og medfører
+      dette farer?
+    </title>
+    <link rel="stylesheet" href="ali stil.css" />
   </head>
   <body>
     <header>
@@ -13,14 +16,33 @@
           <button id="om-oss-knapp">Om oss</button>
           <button id="hjelp-knapp">Hjelp</button>
           <a href="#" id="logo-knapp">
-            <img src="logo.png" alt="Logo" id="logo" />
+            <img src="digital fotavtrykk logo.jpeg" alt="Logo" id="logo" />
           </a>
           <button id="innstillinger-knapp">Innstillinger</button>
           <button id="språk-knapp">
-            <img src="globe.png" alt="Språkvalg" id="globe" />
+            <img src="globe logo.png" alt="Språkvalg" id="globe" />
           </button>
         </div>
       </nav>
+      <div class="horisontal-linje"></div>
     </header>
+
+    <div class="tittel-rektangel">
+      Påvirker et stort digitalt fotavtrykk individers personvern, og medfører
+      dette farer?
+    </div>
+
+    <div class="firkant"></div>
+    <div class="firkant-inne-i-firkant"></div>
+    <img
+      src="bilde for venstre firkant.png"
+      alt="Bilde for venstre firkant"
+      class="bilde-for-firkant"
+    />
+    <div class="liten-firkant-inne-i-firkant"></div>
+    <div class="fordeler-firkant">Fordeler</div>
+    <div class="ulemper-firkant">Ulemper</div>
+    <div class="fordeler-firkant-stor"></div>
+    <div class="ulemper-firkant-stor"></div>
   </body>
 </html>
