--- a/IT1 Proskekt/Home.html
+++ b/IT1 Proskekt/Home.html
@@ -5,28 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Digitalt Fotavtrykk</title>
     <link rel="stylesheet" href="Home.css" />
-    
   </head>
   <body>
-    <header>
-      <nav>
+    <header> 
         <div id="navigasjon">
           <a href="#" id="logo-knapp">
-            <img src="Bilder/digital-fotavtrykk-logo.jpeg" alt="Logo" id="logo" />
+            <img
+              src="Bilder/digital-fotavtrykk-logo.jpeg"
+              alt="Logo"
+              id="logo"
+            />
           </a>
           <div id="språk-knapp">
             <img src="Bilder/globe logo.png" alt="Språkvalg" />
             <div class="dropdown">
               <button onclick="window.location.href='Home.html'">Norsk</button>
-              <button onclick="window.location.href='Home_en.html'">English</button>
-              <button onclick="window.location.href='Home_es.html'">Español</button>
-              <button onclick="window.location.href='Home_ru.html'">Русский</button>
+              <button onclick="window.location.href='Home_en.html'">
+                English
+              </button>
+              <button onclick="window.location.href='Home_es.html'">
+                Español
+              </button>
+              <button onclick="window.location.href='Home_ru.html'">
+                Русский
+              </button>
             </div>
           </div>
         </div>
       </nav>
     </header>
- 
+
     <main>
       <section id="innhold">
         <div id="venstre-seksjon">
@@ -38,26 +46,51 @@
         <div id="høyre-seksjon">
           <h1 id="title">Hva er digitalt fotavtrykk?</h1>
           <p id="description">
-            Digitalt fotavtrykk er sporene du etterlater deg når du bruker internett og digitale tjenester. Dette kan inkludere ting som søkehistorikk, kommentarer og innlegg på sosiale medier, nettbutikker du besøker, eller hvilke apper du bruker.
+            Digitalt fotavtrykk er sporene du etterlater deg når du bruker
+            internett og digitale tjenester. Dette kan inkludere ting som
+            søkehistorikk, kommentarer og innlegg på sosiale medier,
+            nettbutikker du besøker, eller hvilke apper du bruker.
           </p>
         </div>
       </section>
       <section id="spørsmål">
-        <h2 id="impact">Påvirker den økende innhentingen og bruken av data individet og samfunnet?</h2>
+        <h2 id="impact">
+          Påvirker den økende innhentingen og bruken av data individet og
+          samfunnet?
+        </h2>
         <div class="spørsmål">
-          <h3 id="privacy-title">Truer et stort digitalt fotavtrykk personvernet?</h3>
-          <p id="privacy-text">Et digitalt fotavtrykk har både fordeler og ulemper, fra risiko for identitetstyveri til personaliserte tjenester.</p>
+          <h3 id="privacy-title">
+            Truer et stort digitalt fotavtrykk personvernet?
+          </h3>
+          <p id="privacy-text">
+            Et digitalt fotavtrykk har både fordeler og ulemper, fra risiko for
+            identitetstyveri til personaliserte tjenester.
+          </p>
           <a href="Ali.html" class="read-more" id="read-more-1">Les mer her</a>
         </div>
         <div class="spørsmål">
-          <h3 id="ethics-title">Hvor går grensen mellom etisk og uetisk bruk av informasjon?</h3>
-          <p id="ethics-text">Digitalt fotavtrykk gir både muligheter og utfordringer.</p>
-          <a href="Tymofii.html" class="read-more" id="read-more-2">Les mer her</a>
+          <h3 id="ethics-title">
+            Hvor går grensen mellom etisk og uetisk bruk av informasjon?
+          </h3>
+          <p id="ethics-text">
+            Digitalt fotavtrykk gir både muligheter og utfordringer.
+          </p>
+          <a href="Tymofii.html" class="read-more" id="read-more-2"
+            >Les mer her</a
+          >
         </div>
         <div class="spørsmål">
-          <h3 id="data-title">Hva er konsekvensene av lagring og analyse av data?</h3>
-          <p id="data-text">Langsiktige konsekvenser inkluderer forbedret beslutningstaking.</p>
-          <a href="Sergei.html" class="read-more" id="read-more-3">Les mer her</a>
+          <h3 id="data-title">
+            Hva er konsekvensene av lagring og analyse av data?
+          </h3>
+          <p id="data-text">
+            Langsiktige konsekvenser inkluderer forbedret beslutningstaking.
+          </p>
+          <a href="Sergei.html" class="read-more" id="read-more-3"
+            >Les mer her</a
+          >
         </div>
       </section>
     </main>
+  </body>
+</html>
